--- a/app/assets/stylesheets/swagger_ui.css.scss
+++ b/app/assets/stylesheets/swagger_ui.css.scss
@@ -3,10 +3,11 @@ html, body#swagger{
   padding: 0px;
   height: 100%;
   width: 100%;
+  background-color: #efefef;
   #header{
     background-color: #0f6ab4;
     box-sizing: content-box;
-    box-shadow: 0px 1px 10px 1px #ABA3A3;
+    box-shadow: 0 2px 4px -1px rgba(0, 0, 0, 0.14), 0 4px 5px 0 rgba(0, 0, 0, 0.098), 0 1px 10px 0 rgba(0, 0, 0, 0.084);
     position: fixed;
     top: 0px;
     left: 0px;
@@ -62,5 +63,37 @@ html, body#swagger{
   }
   #swagger-ui-container{
     padding-top: 40px;
+    #resources_container{
+      position: relative;
+      box-sizing: border-box;
+      background-color: white;
+      box-shadow: 0 3px 1px -2px rgba(0, 0, 0, 0.14), 0 2px 2px 0 rgba(0, 0, 0, 0.098), 0 1px 5px 0 rgba(0, 0, 0, 0.084);
+      -moz-animation: slideIn 0.7s ease 0s 1 alternate;
+      -webkit-animation: slideIn 0.7s ease 0s 1 alternate;
+      -o-animation: slideIn 0.7s ease 0s 1 alternate;
+      -ms-animation: slideIn 0.7s ease 0s 1 alternate;
+    }
+
   }
+
+}
+
+@-moz-keyframes slideIn {
+  0% {top: 400px;}
+  100% {top: 0px;}
+}
+
+@-webkit-keyframes slideIn {
+  0% {top: 400px;}
+  100% {top: 0px;}
+}
+
+@-o-keyframes slideIn {
+  0% {top: 400px;}
+  100% {top: 0px;}
+}
+
+@-ms-keyframes slideIn {
+  0% {top: 400px;}
+  100% {top: 0px;}
 }
