--- a/app/assets/stylesheets/swagger_ui.css.scss
+++ b/app/assets/stylesheets/swagger_ui.css.scss
@@ -12,6 +12,7 @@ html, body#swagger{
     top: 0px;
     left: 0px;
     right: 0px;
+    z-index: 99;
     .swagger-ui-wrap{
       position: relative;
       height: 40px;
