--- a/app/views/layouts/swagger.html.haml
+++ b/app/views/layouts/swagger.html.haml
@@ -36,7 +36,7 @@
   %body#swagger
     #header
       .swagger-ui-wrap
-        %a#logo{ href: "http://localhost:3000" } Switch
+        %a#logo{ href: "http://localhost:3000" } Shampoo
         %form#api_selector
           .input
             %input#input_baseUrl{ value: "http://localhost:3000/api/v1/swagger_doc", name: "baseUrl", type: "text" }
