--- a/app/assets/stylesheets/swagger_ui.css.scss
+++ b/app/assets/stylesheets/swagger_ui.css.scss
@@ -185,18 +185,25 @@ html, body#swagger{
                 position: relative;
                 .heading{
                   h3 {
-                    position: absolute;
-                    left: 0px;
-                    top: 0px;
-                    padding: 0px;
-                    padding-right: 9px;
+                    // position: absolute;
+                    // left: 0px;
+                    // top: 0px;
+                    // padding: 0px;
+                    // padding-right: 9px;
                     margin: 0px;
-                    border-radius: 0px;
-                    font-size: 10px;
+                    position: relative;
+                    padding-left: 40px;
+                    // border-radius: 0px;
+                    // font-size: 10px;
                     .http_method{
+                      font-size: 10px;
                       display: inline-block;
                       padding: 2px 0px;
                       border-radius: 0px;
+                      top: 0px;
+                      bottom: 0px;
+                      left: 0px;
+                      position: absolute;
                       width: 40px;
                       text-align: center;
                       box-sizing: border-box;
@@ -206,12 +213,12 @@ html, body#swagger{
                         -webkit-font-smoothing: antialiased;
                       }
                     }
-                    .path:before{
-                      content: "->";
-                      display: inline-block;
-                      margin: 0px 2px;
-                      margin-left: 4px;
-                    }
+                    // .path:before{
+                    //   content: "jbuilder ->";
+                    //   display: inline-block;
+                    //   margin: 0px 2px;
+                    //   margin-left: 4px;
+                    // }
                     a{
                       text-decoration: none;
                     }
