--- a/app/views/layouts/swagger.html.haml
+++ b/app/views/layouts/swagger.html.haml
@@ -1,7 +1,7 @@
 !!!
 %html{ :xmlns => "http://www.w3.org/1999/xhtml", :lang => I18n.locale.to_s, "xml:lang" => I18n.locale.to_s }
   %head
-    %title API doc
+    %title API Document
     = javascript_include_tag :swagger_ui
     = stylesheet_link_tag :swagger_ui, :media => :all
     = csrf_meta_tags
