--- a/app/views/temperatures/index.html.haml
+++ b/app/views/temperatures/index.html.haml
@@ -1,2 +1,16 @@
-%h1 Temperatures#index
-%p Find me in app/views/temperatures/index.html.haml
+= stylesheet_link_tag 'c3.min', plugin: 'redmine_timetable'
+= javascript_include_tag 'lib/d3.min', plugin: 'redmine_timetable'
+
+%div#chart
+
+
+:javascript
+  var chart = c3.generate({
+    bindto: '#chart',
+    data: {
+      columns: [
+        ['data1', 30, 200, 100, 400, 150, 250],
+        ['data2', 50, 20, 10, 40, 15, 25]
+      ]
+    }
+  });
